# khateeb_remind

./: README.md
code/: README.md  initialization.txt  test.js
code/backend/: .dockerignore  .gitignore  app.js  docker-compose.yml  dockerfile  dummyAnnouncements.js  dummyData.js  dummyDataMonths.js  dummyKhateebs.js  index.js  package-lock.json  package.json
code/backend/cron/: createRootUser.js  deleteVerificationCodes.js  fridayTextCleanup.js  jummahNotifications.js  test.js  thursdayReport.js  wednesdayNotification.js  wednesdayReminder.js
code/backend/database/: funcs.js  index.js  models.js  settings.js
code/backend/databaseSchemas/: index.js
code/backend/middleware/: helpers.js  main.js
code/backend/routing/: admin.js  adminRoutes.js  general.js  generalRoutes.js  generalRouting.js  index.js  initialize.js  initializeRoutes.js  misc.js  text.js
code/backend/utils/: IANNA-TZs.js  IANNA-TZs.json  (+9 more)
code/client/: .env.development  .env.production  .eslintrc.js  .gitignore  App.config.js  README.md  jest.config.js  lite-server.config.json  lite-server.prod.config.json  package-lock.json  package.json  vue.config.js
code/endToEndTesting/: README.md  package-lock.json  package.json
code/frontend/: package-lock.json  package.json  vue.config.js
code/marketingPages/: 404.html  README.md  index.html  script.js  styles.css
code/python_scripts/: .gitignore
code/rest_microservice/: .gitignore  dockerfile
code/rest_service/: .dockerignore  .gitignore  Cargo.toml  README.md  dockerfile  dockerfile.dev
code/rest_service/src/: consts.rs  cron_job.rs  database.rs  errors.rs  io.rs  main.rs  routes.rs  server.rs  server_utils.rs  state.rs
code/server/: .dockerignore  .env.test  .gitignore  README.md  Server.js  app.config.js  app.js  dTest.bat  db.config.js  dockerfile  jest.config.js  package-lock.json  package.json  server.config.js
code/shortURL/: app.js  package-lock.json  package.json
systemDesign/: README.md
(+787 files in other folders)
