[package]
name = "rest_microservice"
version = "0.1.0"
authors = ["Mostafa Elbannan <mostafaelbannan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.126"
futures = "0.3"
actix-cors = "0.5.4"
mongodb = "1.2.2"
bson = "1.2.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
chrono = "0.4"

[dev-dependencies]
cargo-watch = "7.8.0"