[package]
name = "rest_service"
version = "0.1.0"
authors = ["Mostafa Elbannan <mostafaelbannan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.126"
futures = "0.3"
actix-cors = "0.5.4"
lazy_static = "1.4.0"
cronjob = "0.3.17"
actix-service = "2.0.0"
actix-rt = "2.2.0"

[dependencies.mongodb]
default-features = false
version = "1.2.2"
features = ["tokio-runtime"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.redis]
package = "redis"
version = "0.20.2"
features = ["tokio-comp"]

[dev-dependencies]
cargo-watch = "7.8.0"