[package]
name = "rest_service"
version = "0.1.0"
authors = ["Mostafa Elbannan <mostafaelbannan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
serde = "1.0.126"
tokio = "0.2"
futures = "0.3"
derive_more = "0.99.9"

[dependencies.mongodb]
default-features = false
version = "1.2.2"
features = ["tokio-runtime"]

[dependencies.redis]
version = "0.17"
features = [
    "tokio-rt-core", 
    "tokio-comp", 
    "connection-manager",
    "aio"
]

[dev-dependencies]
cargo-watch = "7.8.0"